--- a/assets/style.css
+++ b/assets/style.css
@@ -23,7 +23,7 @@ html {
 body {
     background: url('./images/Escalator.png') no-repeat center center fixed;
     background-size: cover;
-    height: 100%;
+    /* height: 100%; */
     overflow: hidden;
 }
 
