--- a/assets/style.css
+++ b/assets/style.css
@@ -18,8 +18,7 @@ body {
     background: url('./images/Escalator.png');
     background-size: cover;
     background-repeat: no-repeat;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
 }
 
 #logo {
