--- a/assets/style.css
+++ b/assets/style.css
@@ -19,6 +19,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     height: 100%;
+    background-attachment: fixed;
 }
 
 #logo {
