--- a/assets/style.css
+++ b/assets/style.css
@@ -18,7 +18,7 @@ body {
     background: url('./images/Escalator.png');
     background-size: cover;
     background-repeat: no-repeat;
-    height: 100%;
+    height: 100vh;
     background-attachment: fixed;
 }
 
