--- a/assets/style.css
+++ b/assets/style.css
@@ -19,7 +19,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
-    background-attachment: fixed;
+    overflow: hidden;
 }
 
 #logo {
