font-weight of contact changed

--- a/assets/style.css
+++ b/assets/style.css
@@ -72,7 +72,7 @@ body {
 .contact span {
     color: white;
     font-size: 16px;
-    font-family: mazzardBold;
+    font-family: mazzardExtraLight;
 }
 
 .sm-icons {
