popup youtube video added, links added to social media icons

--- a/assets/style.css
+++ b/assets/style.css
@@ -83,6 +83,18 @@ body {
     width: 10px;
 }
 
+.bs-example{
+    /*margin: 20px;*/
+}
+.modal-dialog iframe{
+    margin: 0 auto;
+    display: block;
+}
+
+.modal-dialog .modal-show {
+    max-width: 1000px;
+}
+
 
 /* Small devices (phones, 480px and down) */
 @media screen and (max-width: 480px) {
